<resources>
    <string name="outrasfuncoes_string">Outras funções</string>
    <string name="title_home_string">Home</string>
    <string name="title_metas_string">Metas</string>
    <string name="title_financas_string">Finanças</string>
    <string name="title_clientes_string">Clientes</string>
    <string name="title_produtos_string">Produtos</string>
    <string name="empresa_string">Empresa</string>
    <string name="nome_string">Nome</string>
    <string name="valor_saldo_string">R$ Saldo</string>
    <string name="title_saldo_atual_string">Saldo atual:</string>
    <string name="title_mainfunctions_string">O que deseja fazer agora\?</string>
    <string name="noticias_string">Notícias</string>
    <string name="newNoticias"> Como o marco legal das garantias pode beneficiar os pequenos negócios</string>
    <string name="newNoticias2">Pequenas e médias empresas crescem 9,4% no terceiro trimestre</string><!--  Slide

    <string name="outrasfuncoes_string">Outras funções</string>
    <string name="title_home_string">Home</string>
    <string name="title_metas_string">Metas</string>
    <string name="title_financas_string">Finanças</string>
    <string name="title_clientes_string">Clientes</string>
    <string name="title_produtos_string">Produtos</string>
    <string name="empresa_string">Empresa</string>
    <string name="nome_string">Nome</string>
    <string name="valor_saldo_string">R$ Saldo</string>
    <string name="title_saldo_atual_string">Saldo atual:</string>
    <string name="title_mainfunctions_string">O que deseja fazer agora\?</string>
    <string name="noticias_string">Notícias</string>

    <string name="newNoticias"> Como o marco legal das garantias pode beneficiar os pequenos negócios</string>
    <string name="newNoticias2">Pequenas e médias empresas crescem 9,4% no terceiro trimestre</string>

    een  --><!--    Titulos
    -->
    <string name="heading_one">Aqui o seu dinheiro rende </string>
    <string name="heading_two">Fácil e simples de usar</string>
    <string name="heading_three">Gráficos inteligentes</string><!-- Descriçõe

    <!-- Descrições SlideScreen  -->
    <string name="desc_one">Controle de gastos e metas financeiras</string>
    <string name="desc_two">Design dinâmico e amigável</string>
    <string name="desc_three">Acompanhe o desemprenho de sua Microempresa atráves de gráficos</string>

    <string name="app_name">TCC2.0</string>
    <string name="btnProd">Prod</string>
    <string name="titleProd">Produtos</string>
    <string name="btnAddProd">Adicionar Produto</string>
    <string name="txtNome">Nome</string>
    <string name="txtStatus">Status</string>
    <string name="txtValorvenda">Valor:</string>
    <string name="txtValorcusto">Custo:</string>
    <string name="txtQtdvenda">Vendidos:</string>
    <string name="txtDesc">Descrição:</string>
    <string name="txtQtd">Quantidade:</string>
    <string name="txtId">Id:</string>
    <string name="header">header</string>
    <string name="gr_fico_em_pizza">Gráfico em pizza</string>
    <string name="grafico_colunas">Grafico colunas</string>
    <string name="btnAdicionaVenda" />
    <string name="btnExcluirPedido">Excluir</string>
    <string name="btnConfirmaPgto">Confirma Pagamento</string>
    <string name="txtNomeCliente">Cliente:</string>
    <string name="hintNomeProd">Nome do produto</string>
    <string name="hintQtd">Quantidade</string>
    <string name="hintValorVenda">Valor de venda</string>
    <string name="hintValorCusto">Custo de produção</string>
    <string name="hintDesc">Descrição</string>
    <string name="hintStatus">Status</string>
    <string name="hintQtdVenda">Quantidade de vendas</string>

    <string name="label_id">ID: %s</string>
    <string name="label_nome">Nome: %s</string>
    <string name="label_qtd">Quantidade: %s</string>
    <string name="label_valor_venda">Valor de Venda: %s</string>
    <string name="label_valor_custo">Valor de Custo: %s</string>
    <string name="label_desc">Descrição: %s</string>
    <string name="label_qtd_venda">Quantidade de Vendas: %s</string>
    <string name="label_status">Status: %s</string>
    <string name="btnEditProd">Editar</string>
    <string name="btnEditarProd">Editar</string>
    <string name="btnExcluir">Excluir</string>
    <string name="txtFone">Telefone:</string>
    <string name="btnAddCliente">Adicionar Cliente</string>
    <string name="btnVerCliente">Ver</string>
    <string name="titleCliente">Clientes</string>
    <string name="hintFoneCliente">Telefone</string>
    <string name="hintEmailCliente">Email</string>
    <string name="hintNomeCliente">Nome do Cliente</string>
    <string name="btnInsertCliente">Adicionar Cliente</string>
    <string name="btnEditCliente">Editar</string>
    <string name="btnAdicionarPedido">Pedido</string>
    <string name="btnAddMetas">Adicionar Metas</string>
    <string name="titleMetas">Metas Financeiras</string>
    <string name="hintNomeMeta">Nome da meta</string>
    <string name="hintValorMeta">Valor da meta</string>
    <string name="btnExcluirMeta">Excluir</string>
    <string name="btnEditMeta">Editar</string>
    <string name="txtValorInicial">R$: 0</string>
</resources>