<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtNome"
            android:layout_width="277dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/txtNome"
            android:textSize="24sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtValorvenda"
        android:layout_width="120dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:layout_weight="1"
        android:text="@string/txtValorvenda"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/txtValorcusto"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:text="@string/txtValorcusto"
        app:layout_constraintStart_toEndOf="@+id/txtValorvenda"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/txtQtdvenda"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:text="@string/txtQtdvenda"
        app:layout_constraintStart_toEndOf="@+id/txtValorcusto"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/txtDesc"
        android:layout_width="406dp"
        android:layout_height="57dp"
        android:layout_marginStart="4dp"
        android:text="@string/txtDesc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtValorvenda" />

    <TextView
        android:id="@+id/txtQtd"
        android:layout_width="86dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:text="@string/txtQtd"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDesc" />

    <TextView
        android:id="@+id/txtStatus"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:text="@string/txtStatus"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtId"
        android:layout_width="74dp"
        android:layout_height="18dp"
        android:text="@string/txtId"
        tools:layout_editor_absoluteX="336dp"
        tools:layout_editor_absoluteY="115dp" />

</androidx.constraintlayout.widget.ConstraintLayout>