<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtNome"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtNome"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txtStatus"
            android:layout_width="186dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/txtStatus" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtValorvenda"
        android:layout_width="120dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:layout_weight="1"
        android:text="@string/txtValorvenda"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/txtValorcusto"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:text="@string/txtValorcusto"
        app:layout_constraintStart_toEndOf="@+id/txtValorvenda"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/txtQtdvenda"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:text="@string/txtQtdvenda"
        app:layout_constraintStart_toEndOf="@+id/txtValorcusto"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/txtDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/txtDesc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtValorvenda" />

    <TextView
        android:id="@+id/txtQtd"
        android:layout_width="86dp"
        android:layout_height="25dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/txtQtdvenda"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>