<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etxtNomeMeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hintNomeMeta"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etxValorMeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/hintValorMeta"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtNomeMeta" />

    <Button
        android:id="@+id/btnExcluirMeta"
        android:layout_width="68dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="64dp"
        android:text="@string/btnExcluirMeta"
        app:layout_constraintStart_toEndOf="@+id/btnEditMeta"
        app:layout_constraintTop_toBottomOf="@+id/etxValorMeta" />

    <Button
        android:id="@+id/btnEditMeta"
        android:layout_width="68dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="64dp"
        android:text="@string/btnEditMeta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxValorMeta" />

</androidx.constraintlayout.widget.ConstraintLayout>