<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etxtNomeCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/hintNome"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etxtEmailCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/hintEmailCliente"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtNomeCliente" />

    <EditText
        android:id="@+id/etxtFoneCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/hintFoneCliente"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtEmailCliente" />

    <EditText
        android:id="@+id/etxtStatusCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/hintStatusCliente"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtFoneCliente" />

    <Button
        android:id="@+id/btnEditCliente"
        android:layout_width="68dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="44dp"
        android:text="@string/btnEditCliente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtStatusCliente" />

    <Button
        android:id="@+id/btnExcluir"
        android:layout_width="68dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="44dp"
        android:text="@string/btnExcluir"
        app:layout_constraintStart_toEndOf="@+id/btnEditCliente"
        app:layout_constraintTop_toBottomOf="@+id/etxtStatusCliente" />

    <Button
        android:id="@+id/btnAdicionarPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnAdicionarPedido"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEditCliente" />

</androidx.constraintlayout.widget.ConstraintLayout>