<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#C5C0FF"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <EditText
        android:fontFamily="@font/inter_semibold"
        android:layout_gravity="center"
        android:id="@+id/etxtNomeCliente"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:textSize="26dp"
        android:ems="10"
        android:hint="@string/hintNomeCliente"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:fontFamily="@font/inter_semibold"
        android:id="@+id/etxtFoneCliente"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/hintFoneCliente"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtNomeCliente" />

    <EditText
        android:fontFamily="@font/inter_semibold"
        android:id="@+id/etxtStatusCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26dp"
        android:layout_gravity="center"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/hintStatusCliente"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtFoneCliente" />

    <EditText
        android:fontFamily="@font/inter_semibold"
        android:id="@+id/etxtEmailCliente"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="26dp"
        android:ems="10"
        android:hint="@string/hintEmailCliente"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtStatusCliente" />

    <Button
        android:id="@+id/btnInsertCliente"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/btnInsertCliente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtEmailCliente" />
</LinearLayout>